@@ -4,15 +4,13 @@
 #include <fstream>
 #include <sstream>
 #include <string>
+#include <vector>
 
-// Usage: ./csv_to_root input.csv [output.root]
-// CSV format: year,month,day,hour,temperature,longitude,latitude
-
-// Full usage:
-// g++ csv_to_root.cxx $(root-config --cflags --libs) -o csv_to_root
-// ./csv_to_root input.csv [output.root]
-// TFile *f = TFile::Open("file.root")
-// TTree *temps = (TTree*)f->Get("temps")
+// Full usage: 
+// g++ csv_to_root.cxx $(root-config --cflags --libs) -o csv_to_root 
+// ./csv_to_root input.csv [output.root] 
+// TFile *f = TFile::Open("file.root") 
+// TTree *temps = (TTree*)f->Get("temps") 
 // temps->Draw("temperature:year")
 
 int main(int argc, char* argv[]) {
@@ -24,7 +22,6 @@ int main(int argc, char* argv[]) {
     std::string inputFile = argv[1];
     std::string outputFile;
 
-    // Default output name = same as input but with .root
     if (argc >= 3)
         outputFile = argv[2];
     else
@@ -36,23 +33,27 @@ int main(int argc, char* argv[]) {
         return 1;
     }
 
-    // Create ROOT file and tree
     TFile *outfile = new TFile(outputFile.c_str(), "RECREATE");
-    TTree *tree = new TTree("temps", "Climate data from CSV (no header)");
+    TTree *tree = new TTree("temps", "Climate data from CSV");
 
-    // Variables for reading
-    int year, month, day, hour;
-    double temperature, longitude, latitude;
+    // Variables for full CSV
+    int year=0, month=0, day=0, hour=0;
+    double temperature=0, longitude=0, latitude=0;
 
-    // Link to branches
+    // Variables for minimal CSV
+    double max_temp=0, min_temp=0;
+
+    // Create branches for both possibilities
     tree->Branch("year", &year, "year/I");
     tree->Branch("month", &month, "month/I");
     tree->Branch("day", &day, "day/I");
     tree->Branch("hour", &hour, "hour/I");
     tree->Branch("temperature", &temperature, "temperature/D");
-    tree->Branch("latitude", &latitude, "latitude/D");
     tree->Branch("longitude", &longitude, "longitude/D");
-    
+    tree->Branch("latitude", &latitude, "latitude/D");
+
+    tree->Branch("max_temp", &max_temp, "max_temp/D");
+    tree->Branch("min_temp", &min_temp, "min_temp/D");
 
     std::string line;
     long nLines = 0;
@@ -62,15 +63,38 @@ int main(int argc, char* argv[]) {
 
         std::stringstream ss(line);
         std::string token;
+        std::vector<std::string> tokens;
 
-        // Parse 7 ;-separated values
-        if (!std::getline(ss, token, ';')) continue;  year = std::stoi(token);
-        if (!std::getline(ss, token, ';')) continue;  month = std::stoi(token);
-        if (!std::getline(ss, token, ';')) continue;  day = std::stoi(token);
-        if (!std::getline(ss, token, ';')) continue;  hour = std::stoi(token);
-        if (!std::getline(ss, token, ';')) continue;  temperature = std::stod(token);
-        if (!std::getline(ss, token, ';')) continue;  longitude = std::stod(token);
-        if (!std::getline(ss, token, ';')) continue;  latitude = std::stod(token);
+        // Split line into tokens
+        while (std::getline(ss, token, ';')) {
+            tokens.push_back(token);
+        }
+
+        if (tokens.size() == 7) {
+            // Full CSV
+            year = std::stoi(tokens[0]);
+            month = std::stoi(tokens[1]);
+            day = std::stoi(tokens[2]);
+            hour = std::stoi(tokens[3]);
+            temperature = std::stod(tokens[4]);
+            longitude = std::stod(tokens[5]);
+            latitude = std::stod(tokens[6]);
+
+            max_temp = min_temp = 0; // unused
+        }
+        else if (tokens.size() == 3) {
+            // Minimal CSV
+            year = std::stoi(tokens[0]);
+            max_temp = std::stod(tokens[1]);
+            min_temp = std::stod(tokens[2]);
+
+            month = day = hour = 0;
+            temperature = longitude = latitude = 0;
+        }
+        else {
+            std::cerr << "⚠️ Skipping line with unexpected column count: " << line << std::endl;
+            continue;
+        }
 
         tree->Fill();
         ++nLines;
